<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"
        app:iconTint="@color/colorAccent" />
    <item
        android:id="@+id/menuFavorite"
        android:icon="@drawable/clock"
        android:title="@string/favorite"
        app:iconTint="@color/colorAccent" />
    <item
        android:id="@+id/menuNotifikasi"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"
        app:iconTint="@color/colorAccent" />
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        app:iconTint="@color/colorAccent" />
</menu>
